# SearchEngine

./: .gitignore  AVLTree.h  CMakeLists.txt  DocumentParser.cpp  DocumentParser.h  IndexHandler.cpp  IndexHandler.h  InvertedFileIndex.cpp  InvertedFileIndex.h  Porter2_Stemmer.cpp  QueryProcessor.cpp  QueryProcessor.h  README.md  SearchEngine.cpp  SearchEngine.h  main.cpp
